log/build_2026-04-21_12-14-43/patraev_danila_study_pkg/stdout_stderr.log
running egg_info
writing build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/PKG-INFO
writing dependency_links to build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/dependency_links.txt
writing entry points to build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/entry_points.txt
writing requirements to build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/requires.txt
writing top-level names to build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/top_level.txt
reading manifest file 'build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/SOURCES.txt'
writing manifest file 'build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying patraev_danila_study_pkg/even_number_publisher.py -> /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/build/patraev_danila_study_pkg/build/lib/patraev_danila_study_pkg
running install
running install_lib
copying /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/build/patraev_danila_study_pkg/build/lib/patraev_danila_study_pkg/even_number_publisher.py -> /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/python3.12/site-packages/patraev_danila_study_pkg
byte-compiling /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/python3.12/site-packages/patraev_danila_study_pkg/even_number_publisher.py to even_number_publisher.cpython-312.pyc
  File "/home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/python3.12/site-packages/patraev_danila_study_pkg/even_number_publisher.py", line 14
    self.publisher = self.create_publisher(Int32 'even_numbers', 10)
                                                 ^^^^^^^^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/python3.12/site-packages/patraev_danila_study_pkg-0.0.0-py3.12.egg-info' (and everything under it)
Copying build/patraev_danila_study_pkg/patraev_danila_study_pkg.egg-info to /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/python3.12/site-packages/patraev_danila_study_pkg-0.0.0-py3.12.egg-info
running install_scripts
Installing even_number_publisher script to /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/patraev_danila_study_pkg
Installing listener script to /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/patraev_danila_study_pkg
Installing talker script to /home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/install/patraev_danila_study_pkg/lib/patraev_danila_study_pkg
writing list of installed files to '/home/ldps-06/ros2_ws/src/patraev_danila_study_pkg/build/patraev_danila_study_pkg/install.log'
